--- a/Tex/MC_selected_neutrino_performance.tex
+++ b/Tex/MC_selected_neutrino_performance.tex
@@ -5,7 +5,7 @@
 The input sample to this portion of the analysis is roughly 190,000 MCC7 simulated BNB neutrino interactions with CORSIKA cosmics as used by the CCInclusive group and descibed in their interal note\cite{CCIncInternalNote}. These simulated events are run through a fully automated reconstruction chain and then a fully automated event selection routine described in Section \ref{MC_BNB_eventselection_section}. The SAM definition used for this sample is ``prodgenie\_bnb\_nu\_cosmic\_uboone\_mcc7\_reco2''.
 
 \subsection{Event Selection}\label{MC_BNB_eventselection_section}
-The event selection algorithms used are designed to locate $\nu_\mu$ charged-current interactions, where at least one muon track exits the interaction vertex. The event selection is described in detail in Section 6.2.1 of the {\ub} CCInclusive internal note (``Selection IIA: track multiplicity 2 (or larger) and no containment requirement'')\cite{CCIncInternalNote}  but the main points will be recapped here. The selection takes as input reconstructed vertices created by the ``pmtrack'' producer module, reconstructed tracks created by the ``pandoraNuPMA'' track producer module, and optical hits produced by the ``opFlashSat'' producer module. The fiducial volume used in this subanalysis is the same as is used throughout the note, defined in Section \ref{fidvol_section}. The following selection cuts are placed to isolate $\nu_\mu$ charged-current interactions:
+The event selection algorithms used are designed to locate $\nu_\mu$ charged-current interactions, where at least one muon track exits the interaction vertex. The event selection is described in detail in Section 6.2.1 of the {\ub} CCInclusive internal note (``Selection IIA: track multiplicity 2 (or larger) and no containment requirement'')\cite{CCIncInternalNote}  but the main points will be recapped here. The selection takes as input reconstructed vertices created by the ``pmtrack'' producer module, reconstructed tracks created by the ``pandoraNuPMA'' track producer module, and optical hits produced by the ``opFlashSat'' producer module. The fiducial volume used in this subanalysis is the same as is used throughout the note, defined in Section \ref{fidvol_section}. The following selection cuts are placed to isolate $\nu_\mu$ charged-current interactions, and their efficiencies are documented in the aforementioned CCInclusive internal note:
 \begin{enumerate}
 \item The event must have at least one flash inside of the BNB beam-spill window brighter than 50 PE.
 \item Two or more reconstructed tracks must originate from the same reconstructed vertex within the fiducial volume (defined in Section \ref{fidvol_section}).
@@ -16,9 +16,9 @@ The event selection algorithms used are designed to locate $\nu_\mu$ charged-cur
 After these event selection cuts are placed, the sample size is 15286 events. Further cuts are placed to isolate single tracks that are eligible for this MCS analysis. 
 \begin{enumerate}
 \item The longest track is assumed to be the muon, and it is the only track studied in this analysis. 
-\item This track must be fully contained within the fiducial volume. At this point 6384 events remain.
-\item This track must be at least one meter in length. At this point, 2406 events remain.
-\item This track must match with an {\sc MCTrack} (Section \ref{MCTrack_section}) originating from the true neutrino interaction in the event. Here, ``match'' means that the start of the reconstructed track is within 3 cm of the start of the {\sc MCTrack}, and the end of the reconstructed track is within 3 cm of the end of the {\sc MCTrack} (or vice-versa). At this point, 1613 events remain.
+\item This track must be fully contained within the fiducial volume (6384 events remain).
+\item This track must be at least one meter in length (2406 events remain).
+\item This track must match with an {\sc MCTrack} (Section \ref{MCTrack_section}) originating from the true neutrino interaction in the event. Here, ``match'' means that the start of the reconstructed track is within 3 cm of the start of the {\sc MCTrack}, and the end of the reconstructed track is within 3 cm of the end of the {\sc MCTrack} (or vice-versa). Note this removes any cosmic-induced mis-identifications. (1613 events remain).
 
 \end{enumerate}
 
@@ -36,9 +36,9 @@ After these additional cuts are placed, 1613 events (tracks) remain for MCS anal
 
 
 \subsection{MCS Momentum Validation}\label{MCS_Momentum_Validation_MCBNBSelectedRecoTrack_section}
-The MCS momentum versus range-based momentum without any cuts other than those described in Section \ref{MC_BNB_eventselection_section} can be seen in Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_noPDGcut_fig}. The off-diagonal component visible in this figure (where MCS momentum greatly overestimates range momentum) is caused primarily by MIDs, most commonly where the longest track is a proton. Note that there are no ``broken tracks'' (which is another not-yet-discussed possible explanation for the off-diagonal component) because of the track-{\sc MCTrack} matching requirement described in Section \ref{MC_BNB_eventselection_section}. Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_withPDGcuts_fig} divides Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_noPDGcut_fig} into those events in which the MCTrack matched to the reconstructed track is a proton, a pion, or a muon. From this figure it is clear comparing MCS momentum to range momentum for contained tracks will provide a handle on separating muon tracks from proton tracks in data (though it is hard to make similar conclusions about pions due to limited statistics in this study). Note that only those events in which the reconstructed track corresponds to a muon in truth (Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_muononly_fig}) will be used to compute bias and resolutions.\\
+The MCS momentum versus range-based momentum without any cuts other than those described in Section \ref{MC_BNB_eventselection_section} can be seen in Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_noPDGcut_fig}. The off-diagonal component visible in this figure (where MCS momentum overestimates range momentum) is caused primarily by MIDs, most commonly where the longest track is a proton. Note that there are no ``broken tracks'' (which is another not-yet-discussed possible explanation for the off-diagonal component) because of the track-{\sc MCTrack} matching requirement described in Section \ref{MC_BNB_eventselection_section}. Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_withPDGcuts_fig} divides Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_noPDGcut_fig} into those events in which the MCTrack matched to the reconstructed track is a proton, a pion, or a muon. From this figure it is clear comparing MCS momentum to range momentum for contained tracks will provide a handle on separating muon tracks from proton tracks in data (though it is hard to make similar conclusions about pions due to limited statistics in this study).\\
 
-The bias and resolution for the MCS momentum estimation method on this sample is computed in the same way as described in previous sections (for example in Section \ref{MCS_Momentum_Validation_MCBNBRecoTrack_section}). The bias and resolution for this momentum reconstruction method is shown in Figure \ref{MCS_range_bias_resolution_MCBNBSelectedRecoTrack_fig}. This figure indicates a bias in the MCS momentum resolution on the order of a few percent, with a resolution that decreases from about 10\% for contained tracks with true total momentum around 0.5 GeV (which corresponds to a length of about 1.7 meters) to below 7\% for contained tracks with true total momentum greater than 0.8 GeV (which corresponds to a length of about 3.1 meters). This agrees well with the analogous plots created from simulated single muons with {\sc MCTracks} (Figure \ref{MCS_range_bias_resolution_MCTrack_fig}).
+The bias and resolution for the MCS momentum estimation method on this sample is computed in the same way as described in previous sections (for example in Section \ref{MCS_Momentum_Validation_MCBNBRecoTrack_section}). Note that only those events in which the reconstructed track corresponds to a muon in truth (Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_muononly_fig}) are used to compute bias and resolutions. The bias and resolution for this momentum reconstruction method is shown in Figure \ref{MCS_range_bias_resolution_MCBNBSelectedRecoTrack_fig}. This figure indicates a bias in the MCS momentum resolution on the order of a few percent, with a resolution that decreases from about 10\% for contained tracks with true total momentum around 0.5 GeV (which corresponds to a length of about 1.7 meters) to below 7\% for contained tracks with true total momentum greater than 0.8 GeV (which corresponds to a length of about 3.1 meters). This agrees well with the analogous plots created from simulated single muons with reconstructed tracks (Figure \ref{MCS_range_bias_resolution_MCBNBRecoTrack_fig}).
 
 
 \begin{figure}[ht!]
@@ -79,7 +79,7 @@ The bias and resolution for the MCS momentum estimation method on this sample is
 	{\includegraphics[width=50mm]{Figures/{MCS_range_resolution_MCBNBSelectedRecoTrack_slice_1.45_1.63}.png}}
 	}
 
-\caption{\textit{Fractional momentum difference for a few representative bins of range momentum derived from Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_muononly_fig}.}}
+\caption{\textit{Fractional momentum difference for a few representative bins of range momentum derived from Figure \ref{MCS_range_momentum_MCBNBSelectedRecoTrack_muononly_fig} (which is produced using only those tracks which truly match to a muon).}}
 \label{MCS_range_bias_resolution_MCBNBSelectedRecoTrack_slices_fig}
 \end{figure}
 
