--- a/Tex/introduction.tex
+++ b/Tex/introduction.tex
@@ -29,7 +29,7 @@ The phenomenon of multiple coulomb scattering (MCS) occurs when a charged partic
 	\sigma_o=\frac{13.6\  \text{MeV}}{p\beta c}z\sqrt{\frac{\ell}{X_0}}\Big[1+0.0038\text{ln}\Big(\frac{\ell}{X_0}\Big)\Big]
 \end{equation}\label{highland_eqtn}
 
-\noindent where $\beta$ is the ratio of the particle's velocity to the speed of light, $\ell$ is the distance traveled inside the material, and $X_0$ is the radiation length of the target material (taken to be a constant 14 cm in liquid argon). With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track it produces in the detector, without any calorimetric information. The method by which this is done is described in detail in Section \ref{MCS_technique_section} and was originally described for use in a LArTPC by the ICARUS collaboration\cite{icarus_mcs_paper} and for use in the \ub detector by Leonias Kalousis\cite{leonidas1}.
+\noindent where $\beta$ is the ratio of the particle's velocity to the speed of light, $\ell$ is the distance traveled inside the material, $z$ is the magnitude of the charge of the particle, and $X_0$ is the radiation length of the target material (taken to be a constant 14 cm in liquid argon). With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track it produces in the detector, without any calorimetric information. The method by which this is done is described in detail in Section \ref{MCS_technique_section} and was originally described for use in a LArTPC by the ICARUS collaboration\cite{icarus_mcs_paper} and for use in the \ub detector by Leonias Kalousis\cite{leonidas1}.
 
 \begin{figure}[ht!]
 \centering
