--- a/Tex/conclusions.tex
+++ b/Tex/conclusions.tex
@@ -1,10 +1,19 @@
-\section{Conclusions}\label{conclusion_section}
+\section{Conclusions and Outlook}\label{conclusion_section}
 
-This note has discussed the multiple coulomb scattering technique for estimating the momentum of a three dimensional reconstructed track and provided motivation for demonstration of the capabilities of this tool within the neutrino LArTPC community. The details of the implementation of this code have been described. The gaussian nature of scatters predicted by the Highland formula has been demonstrated. Additionally the performance of this method has been quantified in two different forms of simulation of fully contained tracks (truth-selected simulated BNB neutrino events with {\sc MCTracks} and reconstructed tracks, and automatically-selected selected BNB + cosmic neutrino events) as well as in approximately 0.5e20 POT of {\ub} data.\\
+This note has discussed the multiple coulomb scattering technique for estimating the momentum of a three dimensional reconstructed track and has provided motivation for demonstration of the capabilities of this tool within the neutrino LArTPC community. This technique will be important for future cross section and oscillation measurements from the {\ub} collaboration. The details of the implementation of this code have been described. The gaussian nature of scatters predicted by the Highland formula has been demonstrated. Additionally the performance of this method has been quantified in two different forms of simulation of fully contained tracks (truth-selected simulated BNB neutrino events with {\sc MCTracks} and reconstructed tracks, and automatically-selected selected BNB + cosmic neutrino events) as well as in approximately 0.5e20 POT of {\ub} data.\\
 
-To summarize the performance on the different fully contained track samples, the bias and resolution for the different samples are overlaid in Figure \ref{MCS_range_bias_resolution_masteroverlay_fig}. In general, performance on reconstructed tracks in MC and data agree though extremely limited statistics above 1 GeV range-based momentum makes more concrete statements difficult. The energy resolution with reconstructed tracks tends to be slightly worse than that with {\sc MCTracks} which can be attributed to imperfect track reconstruction.\\
+To summarize the performance on the different fully contained track samples, the bias and resolution for the different samples are overlaid in Figure \ref{MCS_range_bias_resolution_masteroverlay_fig}. In general, performance on reconstructed tracks in MC and data agree though extremely limited statistics above 1 GeV range-based momentum makes more concrete statements difficult. The energy resolution with reconstructed tracks tends to be slightly worse than that with {\sc MCTracks} which can be attributed to imperfect track reconstruction and other detector effects to which {\sc MCTracks} are insensitive like broken wires and simulated noise.\\
 
-Other uses besides momentum reconstruction for the MCS technique have been described, including using it as a tool for identification of poorly reconstructed tracks and particle identification. In the appendices can be found descriptions of the methods used to optimize the segment length (10 cm) and detector resolution term (2 mrad) in the MCS algorithm, as well as studies of using MCS to determine track direction, and studies to justify using inverse momentum to compute bias and resolution metrics.
+Other uses besides momentum reconstruction for the MCS technique have been described, including using it as a tool for identification of poorly reconstructed tracks and particle identification. In the appendices can be found descriptions of the methods used to optimize the segment length (10 cm) and detector resolution term (2 mrad) in the MCS algorithm, as well as studies of using MCS to determine track direction, and studies to justify using inverse momentum to compute bias and resolution metrics.\\
+
+This note is by no means a complete, end-all analysis of the MCS code; there are many useful ways to continue this study. The most obvious example is the study of performance on exiting tracks. Only fully contained tracks have been studied here because the ultimate goal was to compare data to MC. Using only simulation, however, exiting tracks can be studied since truth energy is known. It is worth noting that Leonidas did a truncated-track analysis\cite{leonidas1} in which he studied only the first $n$ centimeters of a track to determine how the MCS resolution is impacted when the end of the track is not visible; in this way one is able to use fully contained tracks to mimic exiting ones and therefore still make data/MC comparisons. However, one has to keep in mind that the first one meter of a fully-contained 1 GeV muon does not behave the same as the first one meter of an exiting 2 GeV muon and therefore it is difficult to draw concrete conclusions about exiting tracks with this method. While contained tracks have a maximum energy determined by the size of the detector, exiting tracks are not limited in this way. A simulation-only study of exiting tracks is necessary and should be done.\\
+
+Additional avenues to further this analysis include:
+\begin{itemize}
+	\item Determining if the MCS algorithm can be used for muon/pion discrimination (pions should have more larger-angle hard scatters than muons)
+	\item Quantifying the performance of the MCS algorithm as a function of track angle
+	\item Using calorimetry to determine energy loss upstream of a segment rathern than assuming MIP deposited energy (Equation \ref{segment_E_equation})
+\end{itemize}
 
 
 \begin{figure}
@@ -16,7 +25,7 @@ Other uses besides momentum reconstruction for the MCS technique have been descr
 	\subfigure[\textit{MCS momentum resolution as a function of range momentum. The vertical error bars are computed as $\frac{\sigma_{fit}}{\sqrt{2N}}$, and the horizontal error bars indicate bin width.}]
 	{\includegraphics[width=80mm]{Figures/MCS_range_resolution_multiplesamples.png}}
 	}
-\caption{\textit{MCS Momentum resolution for simulated truth-selected BNB numuCC {\sc MCTracks} discussed in Section \ref{MCBNBMCTrack_performance_section} (blue), automatically selected contained numuCC-induced muons from simulated BNB+cosmics where the track is well-reconstructed and matches with the true muon track discussed in Section \ref{MC_performance_section} (green), and automatically selected contained numuCC-induced muons from MicroBooNE data where the track is deemed well-reconstructed and likely-muon from hand scanning discussed in Section \ref{data_performance_section}.}}
+\caption{\textit{MCS momentum resolution for simulated truth-selected BNB numuCC {\sc MCTracks} discussed in Section \ref{MCBNBMCTrack_performance_section} (blue), automatically selected contained numuCC-induced muons from simulated BNB+cosmics where the track is well-reconstructed and matches with the true muon track discussed in Section \ref{MC_performance_section} (green), and automatically selected contained numuCC-induced muons from MicroBooNE data where the track is deemed well-reconstructed and likely-muon from hand scanning discussed in Section \ref{data_performance_section}.}}
 \label{MCS_range_bias_resolution_masteroverlay_fig}
 \end{figure}
 
@@ -30,14 +39,14 @@ Other uses besides momentum reconstruction for the MCS technique have been descr
 
 
 
-
+\clearpage
 \section{Possible Plots for Publication}\label{publicplots_section}
-Here are a few plots that I think should be considered for the publication. The publication should have its scope kept small so as to get it published in a very quick time scale. These plots of course can be modified, their captions changed, etc... I am just putting them here to paint a picture for the readers of this technote what I think should be included in the publication.
+This section includes plots that to be considered for the publication. The publication should have its scope kept small so as to get it published in a very quick time scale. These plots of course can be modified, their captions changed, etc... I am just putting them here to paint a picture for the readers of this technote what I think should be included in the publication.
 \begin{enumerate}
 	\item Figure \ref{pub_plot_1} is a general image whose purpose is to aid the reader in understanding what MCS is and how the code works. I'm not sure this one is public-domain, but I can easily make my own version of it if necessary.
 	\item Figure \ref{pub_plot_2} is an image whose purpose is to validate using range-based momentum in place of true-momentum when the analysis is done on real data where true-momentum obviously is unknown.
 	\item Figure \ref{pub_plot_3} is an image showing the MCS momentum versus range momentum for the automatically selected, handscanned data events.
-	\item Figure \ref{pub_plot_4} is an overlay of MCS momentum bias and resolution for various different types of inputs ({\sc MCTracks} in MC, reconstructed tracks in MC, reconstructed tracks in data). I'll note that since {\sc MCTracks} are sort of MicroBooNE specific, it is possible (and probably best) to leave them out of the publication entirely and therefore avoid having to describe them to readers.
+	\item Figure \ref{pub_plot_4} is an overlay of MCS momentum bias and resolution for directly comparable samples in data and MC. The {\sc MCTrack} sample is left out of this plot because {\sc MCTracks} are very {\ub} specific. Also the x-axis cuts off at around 1.3 GeV as statistics become very limited after that.
 \end{enumerate}
 
 % Image describing MCS idea
@@ -82,6 +91,6 @@ Here are a few plots that I think should be considered for the publication. The 
 	\subfigure[\textit{MCS energy resolution as a function of range energy.}]
 	{\includegraphics[width=80mm]{Figures/MCS_range_resolution_multiplesamples_publicplot.png}}
 	}
-\caption{\textit{MCS Momentum resolution for automatically selected contained numuCC-induced muons from simulated BNB+cosmics where the track is well-reconstructed and matches with the true muon track discussed in Section \ref{MC_performance_section} (blue), and automatically selected contained numuCC-induced muons from MicroBooNE data where the track is deemed well-reconstructed and likely-muon from hand scanning discussed in Section \ref{data_performance_section} (green).}}\label{pub_plot_4}
+\caption{\textit{MCS momentum resolution for automatically selected contained numuCC-induced muons from simulated BNB+cosmics where the track is well-reconstructed and matches with the true muon track discussed in Section \ref{MC_performance_section} (blue), and automatically selected contained numuCC-induced muons from MicroBooNE data where the track is deemed well-reconstructed and likely-muon from hand scanning discussed in Section \ref{data_performance_section} (green).}}\label{pub_plot_4}
 \end{figure}
 
