--- a/Tex/data_performance.tex
+++ b/Tex/data_performance.tex
@@ -7,7 +7,7 @@ The input sample to this portion of the analysis is roughly 5e19 POT worth of tr
 \subsection{Event Selection}
 The exact same event selection cuts are used to identify $\nu_\mu$ charged-current events in this data sample as described in Section \ref{MC_BNB_eventselection_section}. The fiducial volume used in this subanalysis is the same as is used throughout the note, defined in Section \ref{fidvol_section}. The same further cuts to isolate the subset of those events viable for MCS analysis are also placed, with the exception of the cut requiring the reconstructed track matches well with an {\sc MCTrack} in the event (as there are no {\sc MCTracks} in real data). In order to accommodate for this difference, a hand scan of the selected events was conducted.\\
 
-After the event selection cuts, the minimum track length cut, and the containment cuts were placed, 598 events (tracks) remained. Each of these events (tracks) were scanned by hand with an interactive event display. What was shown to the scanner (David Kaleko) were three two-dimensional displays with the raw-wire signals on them. Overlaid on each display was the 2D projection of the 3D reconstructed track and vertex. The scanner looked to ensure the track was well reconstructed (it started within a few cm of the vertex and ended within a few cm of the end of the wire-signal track or vice-versa in all three planes). Additionally the scanner looked for obvious MID topologies like cosmic rays inducing Michel electrons at the reconstructed neutrino vertex (for example when a clear Bragg peak is visible at the neutrino vertex) and also for obvious MID topologies where the track is likely a pion (for example if it charge-exchanges and creates a clear neutral pion decay topology). In general, the scanner chose to be conservative in the sense that if the track didn't look very clearly like a muon from a $\nu_\mu$ charged-current event, the track (event) was removed from the analysis. The purpose of searching for MIDs is to attempt to reproduce the truth-based removal of pion and proton MIDs that is ultimately done in Section \ref{MC_performance_section} so as to make an apples-to-apples data/MC comparison.\\
+After the event selection cuts, the minimum track length cut, and the containment cuts were placed, 598 events (tracks) remained. Each of these events (tracks) were scanned by hand with an interactive event display. What was shown to the scanner (David Kaleko) were three two-dimensional displays with the raw-wire signals on them. Overlaid on each display was the 2D projection of the 3D reconstructed track and vertex. The scanner looked to ensure the track was well reconstructed (it started within a few cm of the vertex and ended within a few cm of the end of the wire-signal track or vice-versa in all three planes). Additionally the scanner looked for obvious MID topologies like cosmic rays inducing Michel electrons at the reconstructed neutrino vertex (for example when a clear Bragg peak is visible at the neutrino vertex) and also for obvious MID topologies where the track is likely a pion (for example if it charge-exchanges and creates a clear neutral pion decay topology). In general, the scanner chose to be conservative in the sense that if the track didn't look very clearly like a muon from a $\nu_\mu$ charged-current event, the track (event) was removed from the analysis. The purpose of searching for MIDs is to attempt to reproduce the truth-based removal of cosmic, pion, and proton MIDs that is ultimately done in Section \ref{MC_performance_section} so as to make an apples-to-apples data/MC comparison.\\
 
 A sample event that was removed by the hand scanner is shown in Figure \ref{bad_evd_fig_1}. Only one two-dimensional display is shown (from the collection plane wires), while the 2D projection of the 3D track is shown in black. The 2D projection of the 3D reconstructed neutrino vertex is shown as a small cyan dot near the bottom left of the image. It is clear that the reconstructed track starts in the correct place, but it is truncated and stops before the end of the track. This track was deemed ``poorly reconstructed'' and was therefore removed from the analysis. A second sample event that was removed by the hand scanner is shown in Figure \ref{bad_evd_fig_2}. This event was deemed some form of unknown MID. The reconstructed track matches wire signals well, but this event does not appear to be a clean $\nu_\mu$ charged-current event, with at least one neutral pion decay visible near the center of the track. A sample event that was deemed acceptable is shown in Figure \ref{good_evd_fig_1}.
 
@@ -38,10 +38,7 @@ A sample event that was removed by the hand scanner is shown in Figure \ref{bad_
 \subsection{MCS Momentum Validation}\label{MCS_Momentum_Validation_DataRecoTrack_section}
 The MCS momentum versus range-based momentum \textit{without any additional hand-scan reconstruction quality checks} can be seen in Figure \ref{MCS_range_momentum_DataRecoTrack_nohandscan_fig}. The off-diagonal component visible in this figure (where MCS momentum greatly overestimates range momentum) is caused both by poor track reconstruction (truncated tracks) and MIDs. Figure \ref{MCS_range_momentum_RecoTrack_withandwithouthandscan_fig} divides Figure \ref{MCS_range_momentum_DataRecoTrack_nohandscan_fig} into those events which are handscanned as having poorly reconstructed or obviously MID'd tracks, and those which are well reconstructed. It can be seen that hand-scanning tends to remove the off-diagonal component and therefore improve the MCS momentum resolution. Note that only those events which have been hand-scanned as acceptable (Figure \ref{realdata_goodhandscan_fig}) will be used to compute bias and resolutions.\\
 
-
-The bias and resolution for the MCS momentum estimation method on this sample is computed in the same way as described in previous sections (for example in Section \ref{MCS_Momentum_Validation_MCBNBRecoTrack_section}). The bias and resolution for this momentum reconstruction method is shown in Figure \ref{MCS_range_bias_resolution_MCBNBSelectedRecoTrack_fig}. This figure indicates a bias in the MCS momentum resolution on the order of a few percent, with a resolution that decreases from about 10\% for contained tracks with true total momentum around 0.5 GeV (which corresponds to a length of about 1.7 meters) to below 7\% for contained tracks with true total momentum greater than 0.8 GeV (which corresponds to a length of about 3.1 meters). This agrees well with the analogous plots created from simulated single muons with {\sc MCTracks} (Figure \ref{MCS_range_bias_resolution_MCTrack_fig}).\\
-
-The bias and resolution for this momentum reconstruction method shown in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig}. This figure indicates a bias in the MCS momentum resolution on the order of a few percent, with a resolution that decreases from about 10\% for contained reconstructed tracks with range momentum around 0.5 GeV (which corresponds to a length of about 1.7 meters) to about 9\% for contained reconstructed tracks with range momentum greater than 0.8 GeV (which corresponds to a length of about 3.1 meters). This is only slightly higher than the the same bias and resolution measurement in simulation as shown in Figure \ref{MCS_range_bias_resolution_MCBNBSelectedRecoTrack_fig}, a difference which may be attributed to the inefficiencies in hand scanning (as compared to the truth-based MID removal and track-well-reconstructed checks in simulation-based sections). Note the bias and resolution plots here stop at a maximum range-based momentum of below 1.4 GeV due to limited statistics.
+The bias and resolution for this momentum reconstruction method shown in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig}. This figure indicates a bias in the MCS momentum resolution on the order of a few percent, with a resolution that decreases from about 11\% for contained reconstructed tracks with range momentum around 0.5 GeV (which corresponds to a length of about 1.7 meters) to about 7\% for contained reconstructed tracks with range momentum greater than 0.8 GeV (which corresponds to a length of about 3.1 meters). This is only slightly higher than the the same bias and resolution measurement in simulation as shown in Figure \ref{MCS_range_bias_resolution_MCBNBSelectedRecoTrack_fig}, a difference which may be attributed to the inefficiencies in hand scanning (as compared to the truth-based MID removal and track-well-reconstructed checks in simulation-based sections). Note the bias and resolution plots here stop at a maximum range-based momentum of below 1.4 GeV due to limited statistics.
 
 
 \begin{figure}[ht!]
@@ -96,17 +93,20 @@ The bias and resolution for this momentum reconstruction method shown in Figure 
 
 
 \subsection{Highland Validation}\label{Highland_Validation_DataRecoTrack_section}
-For this sample of contained, selected, well-reconstructed neutrino-induced tracks in {\ub} data, the same Highland validation plot is created in exactly the same way as described in Section \ref{Highland_Validation_MCTrack_section}. For each consecutive pair of segments, the angular scatter in milliradians divided by the Highland expected RMS in millradians is an entry in the histogram shown in Figure \ref{Highland_validation_DataRecoTracks_fig}. From this figure we can see that the Highland formula is valid for well reconstructed, contained muon tracks in data.
+For this sample of contained, selected, well-reconstructed neutrino-induced tracks in {\ub} data, the same Highland validation plot is created in exactly the same way as described in Section \ref{Highland_Validation_MCTrack_section}. For each consecutive pair of segments, the angular scatter in milliradians divided by the Highland expected RMS in millradians is an entry in the histogram shown in Figure \ref{Highland_validation_DataRecoTracks_fig}, both for the tracks hand scanned as being well reconstructed, and for the sample rejected by the hand scanner as being poorly reconstructed or obvious MID topologies. From this figure we can see that the Highland formula is valid for well reconstructed, contained muon tracks in data.
 
-\begin{figure}[ht!]
-\begin{center}
-\includegraphics[width=100mm]{Figures/Highland_validation_DataBNBSelectedRecoTrack.png}
-\end{center}
-\caption{\textit{10 cm segment angular deviations divided by expected Highland RMS for the sample of well reconstructed, neutrino induced muons in {\ub} data.}}
+\begin{figure}
+\centering
+\mbox{
+	\subfigure[\textit{The {\ub} data sample handscanned as being well reconstructed.}]
+	{\includegraphics[width=75mm]{Figures/Highland_validation_DataBNBSelectedRecoTrack_goodscan.png}}
+	\quad
+	\subfigure[\textit{The {\ub} data sample handscanned as being poorly reconstructed or being a MID topology.}]
+	{\includegraphics[width=75mm]{Figures/Highland_validation_DataBNBSelectedRecoTrack_badscan.png}}
+	}
+\caption{\textit{10 cm segment angular deviations divided by expected Highland RMS for the sample of well reconstructed, neutrino induced muons in {\ub} data as well as for the sample deemed poorly reconstructed or MID topologies by the hand scanning.}}
 \label{Highland_validation_DataRecoTracks_fig}
 \end{figure}
-
-
 
 
 
